[gd_scene load_steps=4 format=3 uid="uid://d37n08byp7fuv"]

[ext_resource type="Script" uid="uid://dr7cui2wwgity" path="res://Scripts/dragger.gd" id="1_ovtgq"]

[sub_resource type="GDScript" id="GDScript_0yf6n"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svxvd"]
size = Vector2(131, 221.813)

[node name="dragger" type="Node2D"]
script = ExtResource("1_ovtgq")

[node name="Area2D" type="Area2D" parent="."]
script = SubResource("GDScript_0yf6n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_svxvd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
